--- a/.github/workflows/terraform-create.yml
+++ b/.github/workflows/terraform-create.yml
@@ -19,7 +19,12 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: "1.11.2"  # Specify your Terraform version
-
+      
+      - name: Setup GCP Auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+      
       - name: Terraform Init
         run: terraform init
 
@@ -27,7 +32,9 @@ jobs:
         run: terraform plan -input=false
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: |
+          echo "${{ secrets.GCP_CREDENTIALS }}" > credentials.json
+          terraform apply -auto-approve
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
