--- a/.github/workflows/terraform-create.yml
+++ b/.github/workflows/terraform-create.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup GCP Auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       
       - name: Terraform Init
         run: terraform init
@@ -33,7 +33,7 @@ jobs:
 
       - name: Terraform Apply
         run: |
-          echo "${{ secrets.GCP_CREDENTIALS }}" > credentials.json
+          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
           terraform apply -auto-approve
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
