--- a/.github/workflows/terraform-create.yml
+++ b/.github/workflows/terraform-create.yml
@@ -26,7 +26,7 @@ jobs:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -reconfigure
 
       - name: Terraform Plan
         run: terraform plan -input=false
